--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -2,6 +2,7 @@
  	position: relative;
 
 	&__text-content {
+		color: $aMadeUpVariable;
 	 	position: absolute;
 	 	top: 50%;
 	 	transform: translateY(-50%);
