--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -13,8 +13,12 @@
 	&__title {
 	 	font-weight: 300;
 	 	color: $mainBlue;
-	 	font-size: 4.8rem;
 	 	margin: 0;
+	 	font-size: 1.1rem;
+
+	 	@media (min-width: 530px) {
+	 	font-size: 4.8rem;	 		
+	 	}
 	}
 
 	&__subtitle {
