--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -16,7 +16,15 @@
 	 	margin: 0;
 	 	font-size: 1.1rem;
 
-	 	@media (min-width: 530px) {
+	 	@mixin atSmall {
+	 	font-size: 2rem;	 		
+	 	}
+
+	 	@mixin atMedium {
+	 	font-size: 3.2rem;	 		
+	 	}
+
+	 	@mixin atLarge{
 	 	font-size: 4.8rem;	 		
 	 	}
 	}
@@ -24,8 +32,12 @@
 	&__subtitle {
 	 	font-weight: 300;
 	 	color: $mainBlue;
-	 	font-size: 2.9rem;
 	 	margin: 0;
+	 	font-size: 1.1rem;
+
+	 	@mixin atSmall {
+	 	font-size: 2.9rem;
+	 	}
 	}
 
 	&__description {
