--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -9,12 +9,17 @@
 		padding-right: 65px;
 	}
  
-	&__4{
-		float: left;
-		width: 33.33%;
-	}
-	&__8{
-		float: left;
-		width: 66.67%;
+
+	@mixin atMedium {
+		&__medium-4{
+			float: left;
+			width: 33.33%;
+		}
+		
+		&__medium-8{
+			float: left;
+			width: 66.66%;
+		}
+
 	}
 }
