--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -5,12 +5,20 @@
 		margin-right: -65px;
 	}
 
+ 	&--gutters-large {
+		margin-right: -100px;
+ 	}
+
 	&--gutters > div {
 		padding-right: 65px;
 	}
  
+ 	&--gutters-large > div {
+		padding-right: 65px;
+	}
+ 
  	&__b-margin-until-medium {
- 		margin-bottom: 1rem;
+ 		margin-bottom: 100px;
  	}
 
 	@mixin atMedium {
@@ -25,6 +33,11 @@
 
 		&__medium-4--larger {
 			width: 37%;
+		}
+
+		&__medium-6 {
+			float: left;
+			width: 50%;
 		}
 
 		&__medium-8{
