--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,53 +1,81 @@
 .row {
-	@mixin clearfix;
 
-	&--gutters {
-		margin-right: -65px;
-	}
+  @mixin clearfix;
 
- 	&--gutters-large {
-		margin-right: -100px;
- 	}
+  &--t-padding {
+    padding-top: 80px;
+  }
 
-	&--gutters > div {
-		padding-right: 65px;
-	}
- 
- 	&--gutters-large > div {
-		padding-right: 65px;
-	}
- 
- 	&__b-margin-until-medium {
- 		margin-bottom: 100px;
- 	}
+  &--gutters {
+    margin-right: -65px;
+  }
 
-	@mixin atMedium {
-		&__b-margin-until-medium {
-			margin-bottom: 0;
-		}
-		
-		&__medium-4{
-			float: left;
-			width: 33.33%;
-		}
+  &--gutters-large {
+    margin-right: -100px;
+  }
 
-		&__medium-4--larger {
-			width: 37%;
-		}
+  &--gutters-small {
+    margin-right: -45px;
+  }
 
-		&__medium-6 {
-			float: left;
-			width: 50%;
-		}
+  &--gutters > div {
+    padding-right: 65px;
+  }
 
-		&__medium-8{
-			float: left;
-			width: 66.66%;
-		}
+  &--gutters-large > div {
+    padding-right: 100px;
+  }
 
-		&__medium-8--smaller {
-			width: 63%;
-		}
+  &--gutters-small > div {
+    padding-right: 45px;
+  }
 
-	}
+  &__b-margin-until-medium {
+    margin-bottom: 1rem;
+  }
+
+  @mixin atMedium {
+
+    &__b-margin-until-medium {
+      margin-bottom: 0;
+    }
+
+    &__medium-4 {
+      float: left;
+      width: 33.33%;
+    }
+
+    &__medium-4--larger {
+      width: 37%;
+    }
+
+    &__medium-6 {
+      float: left;
+      width: 50%;
+    }
+
+    &__medium-8 {
+      float: left;
+      width: 66.66%;
+    }
+
+    &__medium-8--smaller {
+      width: 63%;
+    }
+
+  }
+  
+  /* Begin Equal Height Rules */
+  &--equal-height-at-medium {
+    @mixin atMedium {
+      display: flex;
+    }
+
+    & > div {
+      float: none;
+      display: flex;
+    }
+
+  }
+
 }
